Correct align-items from top to start

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -424,7 +424,7 @@ select option {
     #offers {
         display: flex;
         flex-direction: row;
-        align-items: top;
+        align-items: start;
         justify-content: space-evenly;
     }
 
